--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,4 @@
 {
-    "[python]": {
-        "editor.defaultFormatter": "ms-python.black-formatter"
-    },
     "pylint.args": [
         "--disable=C0111",
         "--disable=C0114",
@@ -13,9 +10,10 @@
         "--disable=E1101",
         "--disable=E0213",
         "--disable=W0718",
-        "--max-line-length=120",
-        "--ignore=W291",
-        "--ignore=E203"
+    ],
+    "flake8.args": [
+        "--ignore=E203",
+        "--max-line-length=160",
+        "--ignore=W291"
     ],
 }
-
