--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,10 +10,13 @@
         "--disable=E1101",
         "--disable=E0213",
         "--disable=W0718",
+        "--disable=W0221",
+        "--disable=W0223",
     ],
     "flake8.args": [
         "--ignore=E203",
         "--max-line-length=160",
-        "--ignore=W291"
+        "--ignore=W291",
+        "--ignore=W503"
     ],
 }
